== Version 2.3.5 Work in progress (not released -- this is a draft) ==

  TODO: recompile .mo (creme_config, emails)


== Version 2.3.4 ==

  Users side :
  ------------
    # The management of the properties constraints of a Relation view has been fixed
      (it was not mandatory to have all the needed properties).
    # The mass-import code checks now property constraints for relationships.
    # An issue with Firefox and 'creme.layout.TextAreaAutoSize' has been fixed.
    # Apps :
        * Persons :
            - The mandatory properties are now checked when a Contact (related to an Organisation) is created.
        * Emails :
            - The brick for Emails' history has been fixed: it was always empty.
        * Billing :
            - In the bricks of lines :
                - The width of <select> has been fixed (smaller now).
                - The height of the comment text area was fixed in the theme "chantilly".
        * Projects :
            - The default form layout for ProjectTask has been fixed.
        * VCFs :
            - In the import form, the RelationTypes with property constraints are not proposed anymore
              (it's an easy way in order to respect the constraints, we could do better).


  Developers side :
  -----------------

    Breaking changes :
    ----------------------
        # The class 'creme_core.forms.fields.EnhancedChoiceIterator' now passes the whole dictionaries (excepted the key "label") it gets to the constructor of the choice.
          Eg: the argument "disabled" of 'creme_core.forms.widgets.EnhancedSelectOptions.Choice' can now be used by dictionary-choices.
          Beware: if your dictionary-choices contain some odd additinal keys, they are not ignored anymore & can make crash the choice's constructor.


== Version 2.3.3 ==

  UPGRADE NOTE :
    - You should upgrade the minor version of Django 3.2 (3.2.13 or more).
    - You should re-generate the media files (creme generatemedia --settings=[...]).
